[package]
name = "newhope"
version = "0.1.3"
authors = ["quininer kel <quininer@live.com>"]
description = "Post-quantum key exchange - a new hope."
repository = "https://github.com/quininer/newhope"
license = "MIT"

[dependencies]
rand = "0.3"
tiny-keccak = "1.1"
byteorder = "0.5"
x86intrin = { git = "https://github.com/mayah/x86intrin.git", optional = true }

[features]
default = [ "api" ]
api = []
tor = []
simd = [ "x86intrin" ]
